Добавление логирования, кастомных исключений, javadoc